# one-for-all

./: AGENTS.md  CLAUDE.md  README.md  default.nix  flake.nix  shell.nix  test.sh
.github/: commit_template.txt
.github/workflows/: test.yml  verify-build-proof.yml
ci/: check-example.sh
docs/: build-verification-examples.md
proofs/: .gitkeep
prover_keys/: README.md
rust/l1ne-for-all-utils/: Cargo.toml  default.nix
scripts/: create-deterministic-tar.sh  generate-cargo-lock.sh  generate-keypair.sh  ofactl  sign-build.sh
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/crypto/: Cargo.toml  README.md
src/crypto/build-signer/: Cargo.toml
src/crypto/build-signer/src/: main.rs
src/crypto/build-verifier/: Cargo.toml
src/crypto/build-verifier/src/: main.rs
src/crypto/pkgs/: default.nix
src/crypto/tests/: test-deterministic-tar.sh  test-end-to-end.sh  test-signer.sh  test-verifier.sh  test.sh
src/crypto/tests/fixtures/: test-key.key
src/lang/rust/checks/: default.nix
src/lang/rust/checks/illegal-bin/: Cargo.toml
src/lang/rust/checks/includes-toolchain-refs/: Cargo.toml
src/lang/rust/checks/with-libs/: Cargo.toml
src/lang/rust/checks/workspace-git/: Cargo.toml
src/lang/rust/checks/workspace-hack/: Cargo.toml
src/lang/rust/checks/workspace-inheritance/: Cargo.toml
src/lang/rust/lib/: crateNameFromCargoToml.nix  default.nix  downloadCargoPackageFromGit.nix  internalCrateNameFromCargoToml.nix  mkCrossToolchainEnv.nix  urlForCargoPackage.nix
src/lang/rust/pkgs/: default.nix
src/lang/rust/test/: flake.nix
(+24 files in other folders)
